# controllers/profile.controller.go
@@ -733,6 +733,7 @@ func (pc *ProfileController) ListProfilesNonAuth(ctx *gin.Context) {
 	var page = ctx.DefaultQuery("page", "1")
 	var limit = ctx.DefaultQuery("limit", "10")
 	var sex = ctx.DefaultQuery("sex", "female")
+	var cityId = ctx.DefaultQuery("city", "1")
 
 	intPage, _ := strconv.Atoi(page)
 	intLimit, _ := strconv.Atoi(limit)
@@ -750,6 +751,7 @@ func (pc *ProfileController) ListProfilesNonAuth(ctx *gin.Context) {
 		Preload("ProfileOptions.ProfileTag").
 		Where("active = ?", true).
 		Where("sex = ?", sex).
+		Where("city_id = ?", cityId).
 		Limit(intLimit).Offset(offset)
 
 	results := dbQuery.Find(&profiles)
