# docs/swagger.json
@@ -1075,6 +1075,13 @@
                         "description": "Sex",
                         "required": false,
                         "type": "string"
+                    },
+                    {
+                        "name": "city",
+                        "in": "query",
+                        "description": "City Id",
+                        "required": false,
+                        "type": "integer"
                     }
                 ],
                 "responses": {
